--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2053,7 +2053,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #008e98
+		background: #008e98b7
 		url("images/overlay.png");
 		box-shadow: inset -0.25em 0 0.25em 0 #06489381
 
