--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2262,7 +2262,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-image: linear-gradient(135deg,  #008e98
-				, #064893, #ffc800c6, #055dd4);
+				, #064893, #ffc800c6,  #008e98);
     			background-size: 500%;
     			animation: fanimado 60s ease infinite;
 			}
