--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2188,52 +2188,38 @@ input, select, textarea {
 						color: #cbce14;
 					}
 
+/* ACORDION PDF */
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
 
-					/* Estilos base para dispositivos móviles */
-#pdfs .container {
-    width: 90%;
-    padding: 10px;
-}
+  .active, .accordion:hover {
+    background-color: #ccc;
+  }
 
-#pdfs .btn-abrir-modal {
-    width: 90%;
-    margin: 10px auto;
-}
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
 
-#pdfs .modal {
-    width: 90%;
-}
 
-/* Estilos para tablets */
-@media (min-width: 768px) {
-    #pdfs .container {
-        width: 80%;
-    }
 
-    #pdfs .btn-abrir-modal {
-        width: 70%;
-    }
 
-    #pdfs .modal {
-        width: 70%;
-    }
-}
 
-/* Estilos para escritorios */
-@media (min-width: 1024px) {
-    #pdfs .container {
-        width: 60%;
-    }
 
-    #pdfs .btn-abrir-modal {
-        width: 50%;
-    }
 
-    #pdfs .modal {
-
-        width: 50%;
-	}
-}
 /* Footer */
 
 
