--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2214,6 +2214,14 @@ input, select, textarea {
     transition: max-height 0.2s ease-out;
   }
 
+  .pdfview {
+    width: 100%;
+    height: 90vh;
+    border: none;
+  }
+
+
+
 
 
 
