--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2221,9 +2221,139 @@ input, select, textarea {
   }
 
 
+/* GALERÍA -------------------------------------------------------------------------- */
+
+.linea{
+    background: #550b51;
+    height: 5px;
+    width: 100%;
+    display: block;
+}
+
+.galeria{ 
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    width: 95%;
+    margin: auto;
+    grid-gap: 10px;
+    padding: 40px 0;
+    overflow: hidden;
+}
+.galeria > a{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+
+}
+
+.galeria img{
+    width: 100%;
+    vertical-align: top;
+    height: 100%;
+    object-fit: cover;
+    transition: .5s;
+}
+
+.galeria a:hover img{
+    filter: blur(2px);
+    transform: rotate(10deg) scale(1.3);
+}
+
+.light-box{ 
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .5);
+    transition: .5s;
+    z-index: 1000;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0);
+    
+}
+
+.light-box img{
+    width: 55vw;
+    max-height: 87vh;
+}
+
+.light-box:target{
+    transform: scale(1); }
+
+.close{
+    display: block;
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    line-height: 40px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.next{
+    display: block;
+    background: rgba(125, 228, 78, 0.772);
+    color: #fff;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+    text-decoration: none;
+    text-align: center;
+}   
 
 
 
+@media screen and (max-width: 500px){
+    .galeria{
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .close{
+        top: 20px;
+        right: 20px;
+    }
+    .light-box img{
+        width: 40vh;
+        max-height: 50vh;
+    }
+}
+
+
+@media screen and (max-width: 370px){
+    .galeria{
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .close{
+        top: 20px;
+        right: 20px;
+    }
+    .light-box img{
+        width: 25vh;
+        max-height: 40vh;
+    }
+}
+@media screen and (max-width: 250px){
+    .galeria{
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .close{
+        top: 20px;
+        right: 20px;
+    }
+    .light-box img{
+        width: 20vh;
+        max-height: 40vh;
+    }
+}
 
 
 
