--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2252,7 +2252,7 @@ input, select, textarea {
     vertical-align: top;
     height: 100%;
     object-fit: cover;
-    transition: .5s;
+    transition: 1s;
 }
 
 .galeria a:hover img{
@@ -2265,7 +2265,7 @@ input, select, textarea {
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, .5);
-    transition: .5s;
+    transition: 1.5s;
     z-index: 1000;
     width: 100%;
     height: 100vh;
