arreglando colores y titulo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2056,10 +2056,8 @@ input, select, textarea {
 		-ms-justify-content: space-between;
 		justify-content: space-between;
 		background: #008e98fe
-		url("images/overlay.png");
+		url("./images/overlay.png");
 		box-shadow: inset -0.25em 0 0.25em 0 #06489381
-
-
 		;
 		color: #fff;
 		height: 100%;
@@ -2190,36 +2188,43 @@ input, select, textarea {
 						color: #cbce14;
 					} */
 
-					#nav ul {
+					:root {
+						--color-texto: rgba(255, 199, 0, 1); /* Color amarillo, puedes ajustar según tu diseño */
+						--color-icono: rgb(119,208,144); /* Mismo color que el texto, puedes ajustar según tu diseño */
+					  }
+					  
+					  #nav ul {
+						padding-top: 20%;
 						list-style: none;
-		padding-left: 0;
-		margin-bottom: 0;
+						padding-left: 0;
+						margin-bottom: 0;
 					  }
 					  
 					  #nav li {
-						
 						display: block;
-				padding: 0.5em 1.5em 0.5em 1.5em;
-				color: rgba(255,199,0,255);
-				text-decoration: none;
-				outline: 0;
-				border: 0;
-				-moz-transition: none;
-				-webkit-transition: none;
-				-ms-transition: none;
-				transition: none;
+						padding: 0.5em 1.5em;
+						color: var(--color-texto); /* Utiliza el color definido para el texto */
+						text-decoration: none;
+						outline: 0;
+						border: 0;
+						-moz-transition: none;
+						-webkit-transition: none;
+						-ms-transition: none;
+						transition: none;
 					  }
 					  
 					  #nav a {
+						
 						text-decoration: none;
-						color: #333; /* Cambia el color del texto según tu diseño */
-						padding: 10px; /* Ajusta el padding para separar el texto de los iconos */
+						color: var(--color-texto); /* Utiliza el color definido para el texto */
+						padding: 9px; /* Ajusta el padding para separar el texto de los iconos */
 						display: flex;
 						align-items: center;
 					  }
 					  
 					  #nav i {
 						margin-right: 8px; /* Espacio entre el icono y el texto */
+						color: var(--color-icono); /* Utiliza el color definido para los íconos */
 					  }
 					  
 					  /* Estilos para la responsividad en tablets y celulares */
@@ -2233,7 +2238,12 @@ input, select, textarea {
 					  /* Transición suave para el hover */
 					  #nav a:hover {
 						transform: translateX(5px);
-						transition: transform 0.3s ease;
+						transition: transform 0.3s ease;
+					  }
+					  
+					  /* Cambiar color al hacer clic */
+					  #nav a.clicked {
+						color: red; /* Color que deseas cuando se hace clic */
 					  }
 
 /* ACORDION PDF */
@@ -2251,7 +2261,7 @@ input, select, textarea {
   }
 
   .active, .accordion:hover {
-    background-color: #ccc;
+    background-color: #cccccc6d;
   }
 
   .panel {
@@ -2667,7 +2677,7 @@ input, select, textarea {
 				font-size: 1.25em;
 			}
 
-		/* Header */
+		/* Header MENU COLOR*/ 
 
 			#header {
 				-moz-backface-visibility: hidden;
@@ -2692,8 +2702,8 @@ input, select, textarea {
 				width: 275px;
 				z-index: 10002;
 				width: 275px;
-				background: #222729 url("images/overlay.png");
-				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
+				background: #1798cbd4 url("images/overlay.png");
+				box-shadow: inset -0.25em 0 0.25em 0 rgba(41, 36, 36, 0.125);
 			}
 
 				#header .top {
