--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1768,8 +1768,8 @@ input, select, textarea {
 		}
 
 			.image.avatar48 img {
-				width: 55px;
-				height: 55px;
+				width: 70px;
+				height: 70px;
 			}
 
 		.image.fit {
@@ -2055,7 +2055,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #008e98fe
+		background: #1798cbd4
 		url("./images/overlay.png");
 		box-shadow: inset -0.25em 0 0.25em 0 #06489381
 		;
@@ -2249,6 +2249,7 @@ input, select, textarea {
 /* ACORDION PDF */
 .accordion {
     background-color: #eee;
+	margin: 25px;
     color: #444;
     cursor: pointer;
     padding: 18px;
@@ -2677,7 +2678,7 @@ input, select, textarea {
 				font-size: 1.25em;
 			}
 
-		/* Header MENU COLOR*/ 
+		/* Header MENU COLOR ----------------------------------------------------------------------------------------------*/ 
 
 			#header {
 				-moz-backface-visibility: hidden;
