editar margen de pdfs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2249,7 +2249,7 @@ input, select, textarea {
 /* ACORDION PDF */
 .accordion {
     background-color: #eee;
-	margin: 25px;
+	margin-top: 25px;
     color: #444;
     cursor: pointer;
     padding: 18px;
