--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2196,12 +2196,22 @@ input, select, textarea {
 				
 			}
 		}
-	
-		@media (max-width: 800px) {
-			#nav { 
+		@media (max-width: 1640px){
+			#nav a {
 				
+				margin-bottom: 5px;
 				
 			}
+		}
+		@media (max-width: 1250px){
+			#nav a {
+				
+				margin-bottom: 2px;
+				
+			}
+		}
+		@media (max-width: 920px) {
+			
 			#nav li {
 				display: block;
 				margin-right: 0;
@@ -2211,7 +2221,7 @@ input, select, textarea {
 			}
 			#nav a {
 				
-				margin-bottom: 80px;
+				margin-bottom: 1px;
 				
 			}
 			
