--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2040,130 +2040,113 @@ input, select, textarea {
 
 
 
-/* Header  COLOR MENU*/
+/* Header */
 
-	#header {
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		-moz-flex-direction: column;
-		-webkit-flex-direction: column;
-		-ms-flex-direction: column;
-		flex-direction: column;
-		-moz-justify-content: space-between;
-		-webkit-justify-content: space-between;
-		-ms-justify-content: space-between;
-		justify-content: space-between;
-		background: #1798cbd4
-		url("./images/overlay.png");
-		box-shadow: inset -0.25em 0 0.25em 0 #06489381
-		;
-		color: #fff;
-		height: 100%;
-		left: 0;
-		overflow-y: auto;
-		position: fixed;
-		text-align: right;
-		top: 0;
-		width: 375px;
+#header {
+	display: -moz-flex;
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	-moz-flex-direction: column;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-moz-justify-content: space-between;
+	-webkit-justify-content: space-between;
+	-ms-justify-content: space-between;
+	justify-content: space-between;
+	background: #222629 url("images/overlay.png");
+	box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
+	color: #fff;
+	height: 100%;
+	left: 0;
+	overflow-y: auto;
+	position: fixed;
+	text-align: right;
+	top: 0;
+	width: 375px;
+}
+
+	#header .top {
+		-moz-flex-grow: 1;
+		-webkit-flex-grow: 1;
+		-ms-flex-grow: 1;
+		flex-grow: 1;
 	}
 
-		#header .top {
-			-moz-flex-grow: 1;
-			-webkit-flex-grow: 1;
-			-ms-flex-grow: 1;
-			flex-grow: 1;
-		}
-
-		#header .bottom {
-			-moz-flex-shrink: 0;
-			-webkit-flex-shrink: 0;
-			-ms-flex-shrink: 0;
-			flex-shrink: 0;
-			padding: .5em  0.5em 0;
-		}
-
-			#header .bottom > :last-child {
-				margin-bottom: 0;
-			}
-
-		#header .icons {
-			font-size: 0.8em;
-			text-align: center;
-		}
- /* COLORE DE ABAJO DEL MENU */
-			#header .icons a {
-				color: #055dd4
-
-				;
-				-moz-transition: color 0.35s ease-in-out;
-				-webkit-transition: color 0.35s ease-in-out;
-				-ms-transition: color 0.35s ease-in-out;
-				transition: color 0.35s ease-in-out;
-			}
-
-				#header .icons a:hover {
-					color: #fff;
-				}
-
-	#logo {
-		position: relative;
-		margin: .75em .5em .5em .5em;
-		min-height: 48px;
-		cursor: default;
+	#header .bottom {
+		-moz-flex-shrink: 0;
+		-webkit-flex-shrink: 0;
+		-ms-flex-shrink: 0;
+		flex-shrink: 0;
+		padding: 1.5em 0 0.75em 0;
 	}
 
-		#logo h1 {
-			position: relative;
-			color: #e1f3f5
-			;
-			font-weight: 600;
-			font-size: 1em;
-			line-height: 1em;
-		}
-
-		#logo p {
-			position: relative;
-			display: block;
-			font-size: 0.6em;
-			color: rgba(255,199,0,255);
-			line-height: 1.25em;
-			margin: 0.5em 0 0 0;
-		}
-
-		#logo .image {
-			position: absolute;
-			left: 0;
-			top: 0;
-		}
-
-
-		:root {
-			--color-texto: rgba(255, 199, 0, 1); /* Color amarillo, puedes ajustar según tu diseño */
-			--color-icono: rgb(119, 208, 144); /* Mismo color que el texto, puedes ajustar según tu diseño */
-		}
-		
-		
-		#nav {
-			overflow: hidden; /* Oculta la barra de desplazamiento */
-			/* ... (otros estilos que ya tienes) ... */
-		}
-		
-		
-		#nav ul {
-			padding-top: 0%;
-			list-style: none;
-			padding-left: 0;
+		#header .bottom > :last-child {
 			margin-bottom: 0;
-			list-style: none; /* Elimina los puntos de diseño (bullets) */
-			padding-left: 0; /* Asegura que no haya espacio adicional a la izquierda */
 		}
-		
-		#nav li {
+
+	#header .icons {
+		font-size: 0.8em;
+		text-align: center;
+	}
+
+		#header .icons a {
+			color: #41484c;
+			-moz-transition: color 0.35s ease-in-out;
+			-webkit-transition: color 0.35s ease-in-out;
+			-ms-transition: color 0.35s ease-in-out;
+			transition: color 0.35s ease-in-out;
+		}
+
+			#header .icons a:hover {
+				color: #fff;
+			}
+
+#logo {
+	position: relative;
+	margin: 1.75em 1.5em 1.5em 1.5em;
+	min-height: 48px;
+	cursor: default;
+}
+
+	#logo h1 {
+		position: relative;
+		color: #fff;
+		font-weight: 600;
+		font-size: 1em;
+		line-height: 1em;
+	}
+
+	#logo p {
+		position: relative;
+		display: block;
+		font-size: 0.6em;
+		color: rgba(255, 255, 255, 0.5);
+		line-height: 1.25em;
+		margin: 0.5em 0 0 0;
+	}
+
+	#logo .image {
+		position: absolute;
+		left: 0;
+		top: 0;
+	}
+
+#nav ul {
+	list-style: none;
+	padding-left: 0;
+	margin-bottom: 0;
+}
+
+	#nav ul li {
+		padding-left: 0;
+	}
+
+		#nav ul li a {
 			display: block;
-			padding: 0.5em 1.5em;
-			color: var(--color-texto); /* Utiliza el color definido para el texto */
+			padding: 0.5em 1.5em 0.5em 1.5em;
+			color: rgba(255, 255, 255, 0.5);
 			text-decoration: none;
 			outline: 0;
 			border: 0;
@@ -2172,78 +2155,31 @@ input, select, textarea {
 			-ms-transition: none;
 			transition: none;
 		}
-		
-		#nav a {
-			margin: -9px;
-			text-decoration: none;
-			color: var(--color-texto); /* Utiliza el color definido para el texto */
-			padding: 19px; /* Ajusta el padding para separar el texto de los iconos */
-			display: flex;
-			margin-bottom: 5px;
-			align-items: center;
-		}
-		
-		#nav i {
-			margin-right: 8px; /* Espacio entre el icono y el texto */
-			color: var(--color-icono); /* Utiliza el color definido para los íconos */
-		}
-		
-		/* Estilos para la responsividad en tablets y celulares */
-		@media (max-width: 2000px){
-			#nav a {
-				
-				margin-bottom: 2em;
-				
-			}
-		}
-		@media (max-width: 1640px){
-			#nav a {
-				
-				margin-bottom: 1px;
-				
-			}
-		}
-		@media (max-width: 1250px){
-			#nav a {
-				
-				margin-bottom: 1px;
-				
-			}
-		}
-		@media (max-width: 920px) {
-			
-			#nav li {
+
+			#nav ul li a span {
+				position: relative;
 				display: block;
-				margin-right: 0;
-				font-size: 0.8em; /* Tamaño de fuente más pequeño para dispositivos móviles */
-				max-height: 50px; /* Altura máxima del menú */
-				overflow: hidden; /* Oculta el contenido que exceda la altura máxima */
+				font-size: 0.8em;
 			}
-			#nav a {
-				
-				margin-bottom: 1px;
-				
+
+				#nav ul li a span:before {
+					position: absolute;
+					left: 0;
+					color: #41484c;
+					text-align: center;
+					width: 1.25em;
+					line-height: 1.75em;
+				}
+
+			#nav ul li a.active {
+				background: rgba(0, 0, 0, 0.15);
+				box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
+				color: #fff;
 			}
-			
-		}
-		@media (max-width: 400px){
-			#nav a {
-				
-				margin-bottom: 0px;
-				
-			}
-		}
-		
-		/* Transición suave para el hover */
-		#nav a:hover {
-			transform: translateX(5px);
-			transition: transform 0.3s ease;
-		}
-		
-		/* Cambiar color al hacer clic */
-		#nav a.clicked {
-			color: red; /* Color que deseas cuando se hace clic */
-		}
+
+				#nav ul li a.active span:before {
+					color: #e27689;
+				}
 
 /* ACORDION PDF */
 .accordion {
