--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2029,15 +2029,19 @@ input, select, textarea {
 		.icon > .label {
 			display: none;
 		}
-
+		.icon.fab:before {
+			font-family: 'Font Awesome 5 Brands';
+		}
 		.icon.solid:before {
-			font-weight: 900;
+			font-weight: 700;
 		}
 
 		.icon.brands:before {
 			font-family: 'Font Awesome 5 Brands';
 		}
-
+		.icon-text {
+			margin-left: 10px; /* Ajusta el margen izquierdo para agregar espacio entre el ícono y el texto */
+		}
 
 
 /* Header */
@@ -2055,9 +2059,9 @@ input, select, textarea {
 	-webkit-justify-content: space-between;
 	-ms-justify-content: space-between;
 	justify-content: space-between;
-	background: #222629 url("images/overlay.png");
-	box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
-	color: #fff;
+	background: #027ad6 url("images/overlay.png");
+	box-shadow: inset -0.25em 0 0.25em 0 rgba(205, 177, 177, 0.1);
+	color: #ffffff;
 	height: 100%;
 	left: 0;
 	overflow-y: auto;
@@ -2092,7 +2096,7 @@ input, select, textarea {
 	}
 
 		#header .icons a {
-			color: #41484c;
+			color: #084467;
 			-moz-transition: color 0.35s ease-in-out;
 			-webkit-transition: color 0.35s ease-in-out;
 			-ms-transition: color 0.35s ease-in-out;
